--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nebular/theme": "^9.0.2",
     "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@popperjs/core": "^2.11.5",
+    "angular-popper": "^2.0.1",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.1",
@@ -39,6 +40,7 @@
     "@angular-devkit/build-angular": "^13.3.4",
     "@angular/cli": "^13.3.4",
     "@angular/compiler-cli": "~13.3.0",
+    "@angular/localize": "^13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
