--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.1",
     "eva-icons": "^1.1.3",
+    "ng-multiselect-dropdown": "^0.3.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
